--- a/app/assets/stylesheets/components/toggle.scss
+++ b/app/assets/stylesheets/components/toggle.scss
@@ -5,7 +5,6 @@
 
   display: inline-block;
   cursor: pointer;
-  margin: 0;
 
   &__input {
     display: none;
