--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -1,6 +1,9 @@
 .push-down {
   margin-bottom: 1rem;
 }
+.push-down-3x {
+  margin-bottom: 3rem !important;
+}
 
 .full-width {
   width: 100%;
